fix(actions): New attempt for tf authent

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,10 +37,10 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve
         env:
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CREDENTIALS.clientId }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CREDENTIALS.clientSecret }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_CREDENTIALS.tenantId }}
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
       - name: Update GitHub secrets
         run: |
