fix(actions): Add GH token

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,3 +49,5 @@ jobs:
           gh secret set APP_NAME --body "$apsName"
           publishProfile=$(az webapp deployment list-publishing-profiles -g "$rgName" -n "$apsName" --slot staging --xml)
           gh secret set STAGING_PUBLISH_PROFILE --body "$publishProfile"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
