feat(actions): Use input for active app

--- a/.github/workflows/terraform-swap.yml
+++ b/.github/workflows/terraform-swap.yml
@@ -2,6 +2,14 @@ name: Swap App Service slots
 
 on:
   workflow_dispatch:
+    inputs:
+      active_app:
+        description: 'The version of the app to put in production'
+        required: true
+        type: choice
+        options:
+          - blue
+          - green
 
 defaults:
   run:
@@ -34,4 +42,4 @@ jobs:
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          TF_VAR_active_app: ${{ secrets.ACTIVE_APP }}
+          TF_VAR_active_app: ${{ inputs.active_app }}
