--- a/.github/workflows/terraform-swap.yml
+++ b/.github/workflows/terraform-swap.yml
@@ -1,4 +1,4 @@
-name: Swap App Service slots
+name: Swap App Service slots using Terraform
 
 on:
   workflow_dispatch:
@@ -16,7 +16,7 @@ defaults:
     working-directory: infra
 
 jobs:
-  provision:
+  swap:
     runs-on: ubuntu-latest
 
     env:
