--- a/.github/workflows/azcli-swap.yml
+++ b/.github/workflows/azcli-swap.yml
@@ -12,6 +12,8 @@ jobs:
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
 
     steps:
+      - uses: actions/checkout@v3
+      
       - name: Azure Login
         uses: azure/login@v1
         with:
