feat(tf): Store active app in state as an output

--- a/.github/workflows/terraform-provision.yml
+++ b/.github/workflows/terraform-provision.yml
@@ -51,8 +51,10 @@ jobs:
         run: |
           rgName=$(terraform output -raw resource_group_name)
           apsName=$(terraform output -raw app_service_name)
+          activeApp=$(terraform output -raw active_app)
           gh secret set APP_NAME --body "$apsName"
           gh secret set RG_NAME --body "$rgName"
+          gh secret set ACTIVE_APP --body "$activeApp"
           publishProfile=$(az webapp deployment list-publishing-profiles -g "$rgName" -n "$apsName" --slot staging --xml)
           gh secret set STAGING_PUBLISH_PROFILE --body "$publishProfile"
         env:
