fix(ci): Set workdir in swap workflow

--- a/.github/workflows/azcli-swap.yml
+++ b/.github/workflows/azcli-swap.yml
@@ -3,6 +3,10 @@ name: Swap App Service slots using Azure CLI
 on:
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: infra
+
 jobs:
   swap:
     runs-on: ubuntu-latest
