--- a/.github/workflows/initial-deployment.yml
+++ b/.github/workflows/initial-deployment.yml
@@ -5,11 +5,11 @@ on:
 
 jobs:
   provision-resources:
-    uses: .github/workflows/terraform-provision.yml
+    uses: ./.github/workflows/terraform-provision.yml
     secrets: inherit
   deploy-blue-app-to-production:
     needs: provision-resources
-    uses: .github/workflows/app-service-deploy.yml
+    uses: ./.github/workflows/app-service-deploy.yml
     with:
       apsName: ${{ needs.provision-resources.outputs.apsName }}
       ref: blue
@@ -17,7 +17,7 @@ jobs:
       PUBLISH_PROFILE: ${{ secrets.PRODUCTION_PUBLISH_PROFILE }}
   deploy-green-app-to-staging:
     needs: provision-resources
-    uses: .github/workflows/app-service-deploy.yml
+    uses: ./.github/workflows/app-service-deploy.yml
     with:
       apsName: ${{ needs.provision-resources.outputs.apsName }}
       slot: staging
