Try to add secret in referenced workflow

--- a/.github/workflows/app-service-deploy.yml
+++ b/.github/workflows/app-service-deploy.yml
@@ -18,6 +18,11 @@ on:
         default: main
         required: false
         type: string
+    secrets:
+      PUBLISH_PROFILE:
+        description: The publish profile to use for deployment
+        required: true
+        type: string
 
 jobs:
   build-and-deploy:
