Fix rg output name

--- a/.github/workflows/terraform-provision.yml
+++ b/.github/workflows/terraform-provision.yml
@@ -56,7 +56,7 @@ jobs:
           activeApp=$(terraform show -json | jq -r '.values.outputs.active_app.value // "blue"')
           echo "Applying with active app $activeApp"
           terraform apply -auto-approve -var active_app=$activeApp
-          echo "rgName=$(terraform output -raw rg_name) >> $GITHUB_OUTPUT"
+          echo "rgName=$(terraform output -raw resource_group_name) >> $GITHUB_OUTPUT"
           echo "apsName=$(terraform output -raw app_service_name) >> $GITHUB_OUTPUT"
         env:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
