--- a/.github/workflows/terraform-provision.yml
+++ b/.github/workflows/terraform-provision.yml
@@ -56,8 +56,8 @@ jobs:
           activeApp=$(terraform show -json | jq -r '.values.outputs.active_app.value // "blue"')
           echo "Applying with active app $activeApp"
           terraform apply -auto-approve -var active_app=$activeApp
-          echo "rgName=$(terraform output -raw resource_group_name) >> $GITHUB_OUTPUT"
-          echo "apsName=$(terraform output -raw app_service_name) >> $GITHUB_OUTPUT"
+          echo "rgName=$(terraform output -raw resource_group_name) >> $GITHUB_ENV"
+          echo "apsName=$(terraform output -raw app_service_name) >> $GITHUB_ENV"
         env:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
@@ -74,6 +74,6 @@ jobs:
           stagingPublishProfile=$(az webapp deployment list-publishing-profiles -g "$RG_NAME" -n "$APP_NAME" --slot staging --xml)
           gh secret set STAGING_PUBLISH_PROFILE --body "$stagingPublishProfile"
         env:
-          RG_NAME: ${{ steps.apply.outputs.rgName }}
-          APP_NAME: ${{ steps.apply.outputs.apsName }}
+          RG_NAME: ${{ env.rgName }}
+          APP_NAME: ${{ env.apsName }}
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
