--- a/.github/workflows/initial-deployment.yml
+++ b/.github/workflows/initial-deployment.yml
@@ -15,6 +15,7 @@ jobs:
       ref: blue
     secrets:
       PUBLISH_PROFILE: ${{ secrets.PRODUCTION_PUBLISH_PROFILE }}
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
   deploy-green-app-to-staging:
     needs: provision-resources
     uses: ./.github/workflows/app-service-deploy.yml
@@ -22,4 +23,6 @@ jobs:
       apsName: ${{ needs.provision-resources.outputs.apsName }}
       slot: staging
       ref: green
-    secrets: inherit
+    secrets:
+      PUBLISH_PROFILE: ${{ secrets.STAGING_PUBLISH_PROFILE }}
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
