Add missing secret declaration

--- a/.github/workflows/app-service-deploy.yml
+++ b/.github/workflows/app-service-deploy.yml
@@ -22,6 +22,8 @@ on:
       PUBLISH_PROFILE:
         description: The publish profile to use for deployment
         required: true
+      AZURE_CREDENTIALS:
+        required: true
 
 jobs:
   build-and-deploy:
