Try to access secret dynamically

--- a/.github/workflows/app-service-deploy.yml
+++ b/.github/workflows/app-service-deploy.yml
@@ -58,5 +58,5 @@ jobs:
         with: 
           app-name: ${{ inputs.apsName }} 
           slot-name: ${{ inputs.slot }}
-          publish-profile: ${{ secrets.STAGING_PUBLISH_PROFILE  }}
+          publish-profile: ${{ secrets[format('{0}_PUBLISH_PROFILE', inputs.slot)] }}
           package: ./src/ApsSlotsDemo.App/publish/ApsSlotsDemo.App
