--- a/.github/workflows/initial-deployment.yml
+++ b/.github/workflows/initial-deployment.yml
@@ -13,6 +13,7 @@ jobs:
     with:
       apsName: ${{ needs.provision-resources.outputs.apsName }}
       ref: blue
+      publishProfile: ${{ secrets.PRODUCTION_PUBLISH_PROFILE }}
     secrets: inherit
   deploy-green-app-to-staging:
     needs: provision-resources
@@ -21,4 +22,5 @@ jobs:
       apsName: ${{ needs.provision-resources.outputs.apsName }}
       slot: staging
       ref: green
+      publishProfile: ${{ secrets.STAGING_PUBLISH_PROFILE }}
     secrets: inherit
