--- a/.github/workflows/app-service-deploy.yml
+++ b/.github/workflows/app-service-deploy.yml
@@ -17,10 +17,6 @@ on:
         default: main
         required: false
         type: string
-      publishProfile:
-        description: The publish profile to use
-        required: true
-        type: string
 
 jobs:
   build-and-deploy:
@@ -50,10 +46,14 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o publish/ApsSlotsDemo.App
 
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy to App Service
         uses: azure/webapps-deploy@v2
         with: 
           app-name: ${{ inputs.apsName }} 
           slot-name: ${{ inputs.slot }}
-          publish-profile: ${{ inputs.publishProfile }}
           package: ./src/ApsSlotsDemo.App/publish/ApsSlotsDemo.App
