--- a/.github/workflows/initial-deployment.yml
+++ b/.github/workflows/initial-deployment.yml
@@ -11,14 +11,14 @@ jobs:
     needs: provision-resources
     uses: ./.github/workflows/app-service-deploy.yml
     with:
-      apsName: ${{ needs.provision-resources.outputs.apsName }}
+      apsName: ${{ secrets.APP_NAME }}
       ref: blue
     secrets: inherit
   deploy-green-app-to-staging:
     needs: provision-resources
     uses: ./.github/workflows/app-service-deploy.yml
     with:
-      apsName: ${{ needs.provision-resources.outputs.apsName }}
+      apsName: ${{ secrets.APP_NAME }}
       slot: staging
       ref: green
     secrets: inherit
