Set app name in deploy workflow

--- a/.github/workflows/app-service-deploy.yml
+++ b/.github/workflows/app-service-deploy.yml
@@ -3,10 +3,6 @@ name: Deploy to App Service
 on:
   workflow_call:
     inputs:
-      apsName:
-        description: The name of the App Service
-        required: true
-        type: string
       slot:
         description: The slot to deploy the application to
         default: production
@@ -54,6 +50,6 @@ jobs:
       - name: Deploy to App Service
         uses: azure/webapps-deploy@v2
         with: 
-          app-name: ${{ inputs.apsName }} 
+          app-name: ${{ secrets.APP_NAME }} 
           slot-name: ${{ inputs.slot }}
           package: ./src/ApsSlotsDemo.App/publish/ApsSlotsDemo.App
