--- a/.github/workflows/initial-deployment.yml
+++ b/.github/workflows/initial-deployment.yml
@@ -11,12 +11,14 @@ jobs:
     needs: provision-resources
     uses: ./.github/workflows/app-service-deploy.yml
     with:
+      appName: ${{ needs.provision-resources.outputs.appName }}
       ref: blue
     secrets: inherit
   deploy-green-app-to-staging:
     needs: provision-resources
     uses: ./.github/workflows/app-service-deploy.yml
     with:
+      appName: ${{ needs.provision-resources.outputs.appName }}
       slot: staging
       ref: green
     secrets: inherit
