fix(ci): Use correct step name

--- a/.github/workflows/terraform-provision.yml
+++ b/.github/workflows/terraform-provision.yml
@@ -20,7 +20,7 @@ jobs:
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
 
     outputs:
-      appName: ${{ steps.apply.outputs.appName }}
+      appName: ${{ steps.update-secrets.outputs.appName }}
 
     permissions:
       actions: write
