--- a/.github/workflows/azcli-swap.yml
+++ b/.github/workflows/azcli-swap.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
 
       - name: Swap WebApp
         uses: azure/CLI@v1
