fix: Missing id-token permissions

--- a/.github/workflows/azcli-swap.yml
+++ b/.github/workflows/azcli-swap.yml
@@ -15,6 +15,9 @@ jobs:
       TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORGANIZATION }}
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
 
+    permissions: 
+      id-token: write
+  
     steps:
       - uses: actions/checkout@v3
 
