--- a/.github/workflows/app-service-deploy.yml
+++ b/.github/workflows/app-service-deploy.yml
@@ -25,6 +25,9 @@ jobs:
       run:
         working-directory: src/ApsSlotsDemo.App
 
+    permissions: 
+      id-token: write
+
     steps:
       - uses: actions/checkout@v3
         with:
