--- a/.github/workflows/azcli-swap.yml
+++ b/.github/workflows/azcli-swap.yml
@@ -32,7 +32,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az webapp deployment slot swap -g ${{ secrets.RG_NAME }} -n ${{ secrets.APP_NAME }} -s staging
+            az webapp deployment slot swap -g ${{ vars.RG_NAME }} -n ${{ vars.APP_NAME }} -s staging
 
       - name: Set-up Terraform
         uses: hashicorp/setup-terraform@v2
