--- a/.github/workflows/azcli-swap.yml
+++ b/.github/workflows/azcli-swap.yml
@@ -32,7 +32,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az webapp deployment slot swap -g ${{ secrets.RG_NAME }} -n ${{ secrets.APP_NAME }} -s staging
+            az webapp deployment slot swap -g ${{ vars.RG_NAME }} -n ${{ vars.APP_NAME }} -s staging
 
       - name: Set-up Terraform
         uses: hashicorp/setup-terraform@v2
@@ -48,3 +48,5 @@ jobs:
           [[ "$currentActiveApp" == 'green' ]] && newActiveApp="blue" || newActiveApp="green"
           echo "Swapping from $currentActiveApp to $newActiveApp..."
           terraform apply -auto-approve -var active_app=$newActiveApp
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
